[package]
name = "autobattler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
env_logger = "0.10.0"
log = { version = "0.4.17", features = ["release_max_level_info"] }
random_name_generator = "0.3.4"
